// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentList is rendered 1`] = `
<ol
  aria-label="aria-label"
  class="euiTimeline euiCommentList testClass1 testClass2 emotion-euiTimeline-l"
  data-test-subj="test subject string"
  role="list"
>
  <li
    class="euiComment emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="userAvatar"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <div
        class="euiCommentEvent emotion-euiCommentEvent-custom"
        data-type="custom"
      />
    </div>
  </li>
</ol>
`;

exports[`EuiCommentList props gutterSize l is rendered 1`] = `
<ol
  class="euiTimeline euiCommentList emotion-euiTimeline-l"
  role="list"
>
  <li
    class="euiComment emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="userAvatar"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <div
        class="euiCommentEvent emotion-euiCommentEvent-custom"
        data-type="custom"
      />
    </div>
  </li>
</ol>
`;

exports[`EuiCommentList props gutterSize m is rendered 1`] = `
<ol
  class="euiTimeline euiCommentList emotion-euiTimeline-m"
  role="list"
>
  <li
    class="euiComment emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="userAvatar"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <div
        class="euiCommentEvent emotion-euiCommentEvent-custom"
        data-type="custom"
      />
    </div>
  </li>
</ol>
`;

exports[`EuiCommentList props gutterSize xl is rendered 1`] = `
<ol
  class="euiTimeline euiCommentList emotion-euiTimeline-xl"
  role="list"
>
  <li
    class="euiComment emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="userAvatar"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <div
        class="euiCommentEvent emotion-euiCommentEvent-custom"
        data-type="custom"
      />
    </div>
  </li>
</ol>
`;
